@startuml
' === Style : tables ERD en rouge ===
skinparam class {
    BackgroundColor #FFAAAA
    BorderColor #CC0000
    ArrowColor #CC0000
}

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
hide circle

' === TABLES ===

Table(corrective_measure, "corrective_measure") {
  {field} PK measure_id : integer
  --
  name : character varying
  description : text
  owner_id : integer
  implementation_date : date
  cost : numeric
  organizational_unit_id : integer
}

Table(event, "event") {
  {field} PK event_id : integer
  --
  declared_by_id : integer
  description : text
  start_datetime : timestamp
  end_datetime : timestamp
  organizational_unit_id : integer
  type : character varying
  classification : character varying
}

Table(event_corrective_measure, "event_corrective_measure") {
  {field} PK event_id : integer
  {field} PK measure_id : integer
}

Table(event_employee, "event_employee") {
  {field} PK event_id : integer
  {field} PK person_id : integer
  --
  involvement_type : character varying
}

Table(event_risk, "event_risk") {
  {field} PK event_id : integer
  {field} PK risk_id : integer
}

Table(organizational_unit, "organizational_unit") {
  {field} PK unit_id : integer
  --
  identifier : character varying
  name : character varying
  location : character varying
}

Table(person, "person") {
  {field} PK person_id : integer
  --
  matricule : character varying
  name : character varying
  family_name : character varying
  role : character varying
}

Table(risk, "risk") {
  {field} PK risk_id : integer
  --
  name : character varying
  gravity : character varying
  probability : character varying
}

' === RELATIONS avec cardinalités ===

corrective_measure }o..|| organizational_unit : organizational_unit_id
corrective_measure }o..|| person : owner_id

event }o..|| person : declared_by_id
event }o..|| organizational_unit : organizational_unit_id

event_corrective_measure }o..|| event : event_id
event_corrective_measure }o..|| corrective_measure : measure_id

event_employee }o..|| event : event_id
event_employee }o..|| person : person_id

event_risk }o..|| event : event_id
event_risk }o..|| risk : risk_id

@enduml